--- a/index.html
+++ b/index.html
@@ -29,23 +29,233 @@
       <div class="corpo">
         <div> <br>
           <div class="doce">
-            <h3>Receitas doces</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
-              explicabo accusantium excepturi commodi, quidem dicta dolorem
-              natus eveniet omnis repellat fuga. Asperiores ratione rerum
-              repellendus, tempore expedita hic perferendis id, sed amet
-              aspernatur dolor alias provident explicabo? Sint nisi corrupti
-              aliquam quaerat autem ab, molestias minima accusamus voluptas
-              obcaecati fugit dolore impedit eum ullam debitis, iusto natus quos
-              eveniet doloribus! Aliquid nesciunt explicabo pariatur, nemo,
-              numquam totam saepe aspernatur vel, commodi laborum repellendus
-              velit magnam tempore. Suscipit adipisci dolores dicta!
+            <h2>Receitas doces</h2>
+            <h2>PAVÊ</h2>
+            <br />
+            <section>
+              <h3>INGREDIENTES</h3>
+            </section>
+            <br />
+            <ul>
+              <li>1 lata de creme de leite</li>
+              <li>1 lata de creme de leite</li>
+              <li>2 Latas de leite condensado</li>
+              <li>2 Gemas</li>
+              <li>2 Colheres de maisena</li>
+              <li>3 Colheres de chocolate em pó ou achocolatado</li>
+              <li>Biscoito maisena</li>
+              <li>Leite para molhar os biscoitos</li>
+              <li>Raspas de chocolate (opcional)</li>
+              <li>Manteiga sem sal ou margarina</li>
+            </ul>
+            <br />
+            <section>
+              <h3>MODO DE PREPARO</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Primeiro, pegue a lata de leite condensado, as gemas, a maisena e o leite</li>
+              <li>Coloque no fogo e deixe até que fique um creme, reserve</li>
+              <li>Coloque a segunda lata de leite condensado com um pouco de margarina e o chocolate</li>
+              <li>Deixe no fogo até ficar um creme tipo brigadeiro</li>
+              <li>Desligue o fogo e junte com o creme de leite.</li>
+            </ol>
+            <br/>
+            <h3>Montagem</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Coloque primeiro o creme branco.</li>
+              <li>Em seguida, mergulhe os biscoitos no leite e coloque sobre o creme branco.</li>
+              <li>Depois, coloque o creme preto e acrescente as raspas de chocolate sobre ele.</li>
+              <li>Deixe no congelador durante 2 horas.</li>
+            </ol> <br>
+            <br/>
+            <img src="./img/receita doce/pavê.jpg" alt="" class="receita" height="140" width="300"/>
+            <br/>
+            <hr size="5" width="100%" align="center" noshade>
+            <br />
+            <h2>BOLO GELADO</h2>
+            <br />
+            <section>
+              <h3>INGREDIENTES</h3>
+            </section>
+            <br />
+            <section>
+              <h3>Massa</h3>
+            </section>
+            <br />
+            <ul>
+              <li>4 ovos</li>
+              <li>2 xícaras (chá) de açúcar</li>
+              <li>3 xícaras (chá) de farinha de trigo</li>
+              <li>1 copo (americano) de suco de laranja</li>
+              <li>1 colher (sopa) de fermento em pó</li>
+            </ul>
+            <section>
+              <br>
+              <h3>Cobertura</h3>
+            </section>
+            <br />
+            <ul>
+              <li>1 garrafa pequena de leite de coco</li>
+              <li>1 garrafa de leite (utilize a mesma garrafa do leite de coco como medida)</li>
+              <li>1 lata de leite condensado</li>
+              <li>1 pacote de coco ralado sem açúcar</li>
+            </ul>
+            <br />
+            <section>
+              <h3>MODO DE PREPARO</h3>
+            </section>
+            <br />
+            <section>
+              <h3>Massa</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Em uma batedeira, bata as claras em neve acrescentando o açúcar aos poucos e bata por 3 minutos.
+              </li>
+              <li>Adicione as gemas, o trigo, o suco e continue batendo até formar uma massa homogênea.</li>
+              <li>Por último, adicione o fermento e bata por mais 40 segundos na menor velocidade da batedeira.</li>
+              <li>Despeje a massa em uma forma média e untada.</li>
+              <li>Asse em forno preaquecido em temperatura média de 180 °C por 40 minutos ou até dourar.</li>
+            </ol> <br>
+            <h3>Cobertura</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Em uma tigela, misture o leite de coco, o leite, o leite condensado e reserve.</li>
+              <li>Após 40 minutos, retire o bolo do forno e fure toda a sua superfície com um garfo para facilitar a penetração da cobertura.</li>
+              <li>Com o bolo ainda quente, despeje a cobertura sobre ele e salpique por cima o coco ralado.</li>
+              <li>Leve a geladeira por 3 horas, depois corte o bolo em quadrados do tamanho que preferir e embrulhe com papel alumínio.</li>
+              <li>Conserve na geladeira.</li>
+            </ol>
+            <br/>
+            <img src="./img/receita doce/bolo-gelado.jpg" alt="" class="receita" height="140" width="300"/>
+            <br/>
+            <hr size="5" width="100%" class="center" noshade>
+            <br />
+            <h2>TORTA DE MORANGO</h2>
+            <br />
+            <section>
+              <h3>INGREDIENTES</h3>
+            </section>
+            <br />
+            <section>
+            </section>
+            <br />
+            <ul>
+              <li>1 xícara (chá) de farinha de trigo</li>
+              <li>1/2 xícara (chá) de amido de milho</li>
+              <li>1/4 de xícara (chá) de água gelada</li>
+              <li>1/2 xícara (chá) de margarina</li>
+              <li>2 colheres (sopa) de açúcar</li>
+              <li>1 pitada de sal</li>
+            </ul>
+            <section>
+              <br>
+              <h3>Creme</h3>
+            </section>
+            <br />
+            <ul>
+              <li>2 xícaras (chá) de leite fervente</li>
+              <li>5 gemas peneiradas</li>
+              <li>2/3 de xícara (chá) de açúcar</li>
+              <li>1/4 de xícara (chá) de amido de milho</li>
+              <li>2 colheres (sopa) de manteiga</li>
+              <li>1 colher (chá) de essência de baunilha</li>
+            </ul>
+            <br />
+            <section>
+              <h3>Cobertura</h3>
+            </section>
+            <br />
+            <ul>
+              <li>1 bandeja de morangos cortados ao meio no sentido do comprimento (300 g)</li>
+              <li>2 xícaras (chá) de água fria</li>
+              <li>1/2 caixinha de pó para gelatina sabor morango</li>
+              <li>2 colheres (sopa) de farinha de araruta</li>
+              <li>1/2 xícara (chá) de açúcar</li>
+              <li>Amêndoas torradas picadinhas para decorar (ou castanhas de caju, nozes etc.)</li>
+            </ul>
+            <br />
+            <section>
+              <h3>MODO DE PREPARO</h3>
+            </section>
+            <br />
+            <section>
+            </section>
+            <br />
+            <ol>
+              <li>Misture a margarina com o açúcar e o sal.</li>
+              <li>Acrescente a farinha, o amido e a água e amasse bem.</li>
+              <li>Se necessário, adicione mais farinha, para a massa ficar lisa e macia.</li>
+              <li>Abra a massa com o rolo em superfície levemente enfarinhada e forre uma fôrma baixa de fundo removível (22 cm de diâmetro).
+              </li>
+              <li>Fure levemente a massa com um garfo para não estufar enquanto assa.
+              </li>
+              <li>Leve ao forno médio preaquecido (200 ºC) por cerca de 30 minutos ou até dourar. Deixe esfriar.
+              </li>
+              <li>Recheie com o creme e distribua os morangos.</li>
+              <li>Espalhe a cobertura delicadamente (apoie uma colher grande sobre os morangos e despeje o creme sobre a colher, deixando que se espalhe sobre a torta).</li>
+              <li>Salpique a borda com amêndoa e leve à geladeira por pelo menos 2 horas antes de desenformar.</li>
+            </ol> <br>
+            <h3>Creme</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Misture o amido com o açúcar, as gemas e o leite em uma panela e leve ao fogo brando, mexendo sempre, até engrossar.</li>
+              <li>Cozinhe por mais 5 minutos e, fora do fogo, incorpore a manteiga e a baunilha. Deixe esfriar.
+              </li>
+            </ol> <br>
+            <h3>Cobertura</h3>
+            </section>
+            <br />
+            <ol>
+              <li>Misture o açúcar, o pó de gelatina e a araruta e acrescente a água aos poucos.</li>
+              <li>Leve ao fogo e mexa até engrossar. Utilize fria.</li>
+            </ol>
+            <br/>
+            <img src="./img/receita doce/torta-morango.jpg" alt="" class="receita" height="140" width="300"/>
+            <br/>
+            <hr size="5" width="100%" class="center" noshade>
+            <br />
+            <h2>MOUSSE DE MARACUJÁ</h2>
+            <br />
+            <section>
+              <h3>INGREDIENTES</h3>
+            </section>
+            <br />
+            <section>
+            </section>
+            <br />
+            <ul>
+              <li>1 lata de leite condensado</li>
+              <li>1 lata de creme de leite sem soro</li>
+              <li>320 ml de suco de maracujá</li>
+            </ul>
+            <section>
+              <h3>MODO DE PREPARO</h3>
+            </section>
+            <br />
+            <section>
+            </section>
+            <br />
+            <ol>
+              <li>Em um liquidificador, bata o creme de leite, o leite condensado e o suco concentrado de maracujá.</li>
+              <li>Em uma tigela, despeje a mistura e leve à geladeira por, no mínimo, 4 horas.
+              </li>
+            </ol> <br>
+            <img src="./img/receita doce/mousse.jpg" alt="" class="receita" height="140" width="300"/>
+            <br/>
+            <hr size="5" width="100%" class="center" noshade>
+            <br />
             </p>
+
           </div>
           <div class="salgada">
             <h2>Receita salgada</h2>
-            <h4>TORTA DE FRANGO</h4>
+            <h2>TORTA DE FRANGO</h2>
             <br />
             <section>
               <h3>INGREDIENTES</h3>
@@ -113,7 +323,7 @@
             <br/>
             <hr size="5" width="100%" class="center" noshade>
             <br />
-            <h4>FRICASSÊ DE FRANGO</h4>
+            <h2>FRICASSÊ DE FRANGO</h2>
             <br />
             <section>
               <h3>INGREDIENTES</h3>
@@ -147,7 +357,7 @@
             <br/>
             <hr size="5" width="100%" align="center" noshade>
             <br />
-            <h4>KIBE DE FORNO</h4>
+            <h2>KIBE DE FORNO</h2>
             <br />
             <section>
               <h3>INGREDIENTES</h3>
@@ -193,7 +403,7 @@
             <br/>
             <hr size="5" width="100%" align="center" noshade>
             <br />
-            <h4>ROCAMBOLE DE CARNE MOÍDA</h4>
+            <h2>ROCAMBOLE DE CARNE MOÍDA</h2>
             <br />
             <section>
               <h3>INGREDIENTES</h3>
