--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
               <li>Deixe no congelador durante 2 horas.</li>
             </ol> <br>
             <br/>
-            <img src="./img/receita doce/pavê.jpg" alt="" class="receita" height="140" width="300"/>
+            <img src="./img/receita doce/pavê.jpg" alt="" class="Imagem do pavê pronto sendo servido" height="140" width="300"/>
             <br/>
-            <hr size="5" width="100%" align="center" noshade>
+            <hr size="5" width="100%" left="center" noshade>
             <br />
             <h2>BOLO GELADO</h2>
             <br />
@@ -131,7 +131,7 @@
               <li>Conserve na geladeira.</li>
             </ol>
             <br/>
-            <img src="./img/receita doce/bolo-gelado.jpg" alt="" class="receita" height="140" width="300"/>
+            <img src="./img/receita doce/bolo-gelado.jpg" alt="" class="Imagem do bolo gelado depois de pronto" height="140" width="300"/>
             <br/>
             <hr size="5" width="100%" class="center" noshade>
             <br />
@@ -216,7 +216,7 @@
               <li>Leve ao fogo e mexa até engrossar. Utilize fria.</li>
             </ol>
             <br/>
-            <img src="./img/receita doce/torta-morango.jpg" alt="" class="receita" height="140" width="300"/>
+            <img src="./img/receita doce/torta-morango.jpg" alt="" class="Imagem da torta de morango feita" height="140" width="300"/>
             <br/>
             <hr size="5" width="100%" class="center" noshade>
             <br />
@@ -246,7 +246,7 @@
               <li>Em uma tigela, despeje a mistura e leve à geladeira por, no mínimo, 4 horas.
               </li>
             </ol> <br>
-            <img src="./img/receita doce/mousse.jpg" alt="" class="receita" height="140" width="300"/>
+            <img src="./img/receita doce/mousse.jpg" alt="" class="Imagem do Mousse depois de praparado e servido" height="140" width="300"/>
             <br/>
             <hr size="5" width="100%" class="center" noshade>
             <br />
